AP-4351 # fixed unintended center alignment of ESRI map text

--- a/src/styles/arcgis-web-map.scss
+++ b/src/styles/arcgis-web-map.scss
@@ -1,5 +1,6 @@
 .arcgis-web-map {
   height: 500px;
+  text-align: initial;
 
   .esri-view-surface {
     border-radius: $radius;
